CHANGE: to powershell

--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -72,7 +72,7 @@ ausgewählt haben, ansonsten können Sie die Installation garnicht durchführen.
   <Tab className="hide" tabIndex="os-windows">
     Am einfachsten geht die Installation auf Windows mit dem Kommandozeilen-Befehl `winget`. Dafür müssen Sie ein neues Terminal öffnen. Das machen Sie am besten als Administrator, damit die Installation auch sicher funktioniert.
 
-    öffnen Sie das Startmenu und suchen Sie nach `cmd`. Mit einem Rechtsklick auf das Programm, können Sie dann `Als Administrator öffnen` auswählen. Dann sollte ein neues Fenster aufgehen, wo Sie Befehle ausführen können.
+    öffnen Sie das Startmenu und suchen Sie nach `powershell`. Mit einem Rechtsklick auf das Programm, können Sie dann `Als Administrator öffnen` auswählen. Dann sollte ein neues Fenster aufgehen, wo Sie Befehle ausführen können.
 
     Damit Sie `winget` sicher haben, und dieses auch auf der neusten Version ist, können Sie den folgenden Befehl laufen lassen.
 
