CHANGE: github classroom info

--- a/src/sites/md/01-0-svg-installation.mdx
+++ b/src/sites/md/01-0-svg-installation.mdx
@@ -3,29 +3,21 @@ import Example from "../../components/Example"
 
 <Chapter>
 
-## Vektorgrafiken mit SVG
+## Github Classrooms
 
-<Example title="Auftrag">
+<section>
 
-Gehen Sie auf die folgende Webseite:
-
-```text
-https://github.com/simeonjackman/01-grafiken-mit-svg.git
-```
-
-Drücken Sie dann auf den grünen Knopf `"Use this template"` Drücken Sie dann auf
-`"Create a new repository"` Kreieren Sie ein eigenes repository mit dem Namen
-01-grafiken-mit-svg.
+Gehen Sie auf die Webseite, welche die Lehrperson mit Ihnen geteilt hat.
+Sie sollten dann Zugriff erhalten auf Ihr eigenes Repository (Code-Bibliothen), welche Sie für das Erlernen von SVG verwenden werden.
 
 Wechseln Sie dann zurück ins VSCode und drücken Sie `CTRL + SHIFT + P` und
 tippen Sie `clone`. Wählen Sie dann `Git: Clone` aus, und klonen Sie das
-folgende Repository zu Ihnen auf den Computer. (ersetzen Sie IHR-GITGUB-NAME mit
-Ihrem Github Namen)
+folgende Repository zu Ihnen auf den Computer. (stellen Sie sicher, dass Sie den richtigen Link kopieren)
 
 ```text
-https://github.com/IHR-GITGUB-NAME/01-grafiken-mit-svg.git
+https://github.com/gym-web-coding/[...].git
 ```
 
-</Example>
+</section>
 
 </Chapter>
