FIX: extension install

--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -138,12 +138,13 @@ installieren möchten. Wenn Sie dort auf ja drücken, können Sie diesen Abschni
 überspringen] Moderne Webseiten brauchen jeweils einen Webserver um zu
 funktionieren. Dafür verwenden wir `Docker` zusammen mit `nodejs`. Damit wir
 `Docker` direkt verwenden können, müssen wir eine **Erweiterung** in `VSCode`
-installieren. Drücken Sie dafür einfach `CTRL + SHIFT + P` und kopieren Sie den
+installieren. Öffnen Sie Visual Studio Code (VSCode), drücken Sie dann `CTRL + SHIFT + P` und kopieren Sie den
 folgenden Text in das Feld und drücken Sie `Enter`.
 
 ```text
 ext install ms-vscode-remote.remote-containers
 ```
+Wählen Sie dann die Extension Dev Containers auf der linken Seite und drücken Sie auf install.
 
 ## Github
 
