ADD: svg install reference

--- a/src/sites/md/01-0-svg-installation.mdx
+++ b/src/sites/md/01-0-svg-installation.mdx
@@ -7,8 +7,9 @@ import Example from "../../components/Example"
 
 <section>
 
-Gehen Sie auf die Webseite, welche die Lehrperson mit Ihnen geteilt hat.
-Sie sollten dann Zugriff erhalten auf Ihr eigenes Repository (Code-Bibliothen), welche Sie für das Erlernen von SVG verwenden werden.
+Gehen Sie auf die Webseite, welche die Lehrperson mit Ihnen auf OneNote geteilt hat.
+Sie sollten dann Zugriff erhalten auf Ihr eigenes Repository (Code-Bibliothek), welche Sie für das Erlernen von SVG verwenden werden.
+(Die Übersichtseite von Github finden Sie [hier](https://github.com/dashboard).)
 
 Wechseln Sie dann zurück ins VSCode und drücken Sie `CTRL + SHIFT + P` und
 tippen Sie `clone`. Wählen Sie dann `Git: Clone` aus, und klonen Sie das
