--- a/src/sites/md/01-0-svg.mdx
+++ b/src/sites/md/01-0-svg.mdx
@@ -6,7 +6,7 @@ import Example from "../../components/Example"
 
 ## Vektorgrafiken mit SVG
 
-In der Informatik unterscheidet man zwischen 2 arten von Bildern. Zum einen gibt
+In der Informatik unterscheidet man zwischen 2 Arten von Bildern. Zum einen gibt
 es Vektorgrafiken, bei denen man die Abbildung mithilfe von Mathematik
 beschriebt. Die andere Art von Bildern nennt man Rastergrafiken, dort wird das
 Bild Pixel für Pixel beschrieben. Wir beschäftigen uns mit Vektorgrafiken, da
