--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -13,7 +13,8 @@ In der Informatik braucht es viele verschiedenen Werkzeuge, um mit dem Computer
 und auch mit Code zu arbeiten. Diese Werkzeuge müssen zuerst installiert werden.
 Im folgenden Abschnitt finden Sie eine Installationsanleitung für Ihr
 Betriebssystem. Stellen Sie sicher dass Sie das richtige Betriebssystem
-ausgewählt haben, ansonsten können Sie die Installation nicht korrekt durchführen.
+ausgewählt haben, ansonsten können Sie die Installation nicht korrekt
+durchführen.
 
 <TabContainer>
   <ul className="tabs">
@@ -51,14 +52,20 @@ ausgewählt haben, ansonsten können Sie die Installation nicht korrekt durchfü
     brew install --cask google-chrome
     ```
 
-    ### Docker-Desktop
+    ### Live Server
 
-    `Docker` ist ein Werkzeug mit dem man Container erstellen und laufen lassen kann. Das hat den Vorteil, dass wir auf verschiedenen Geräten mit verschiedenen Betriebssystemen die gleiche Umgebung in einem Container laufen lassen können. Somit sollten die Wekzeuge nach der Installation bei allen gleich funktionieren `Docker` können Sie auch mit diesem Befehl installieren.
+    Moderne Webseiten brauchen jeweils einen Webserver um zu funktionieren. Dafür
+    verwenden wir `Live Server`. Dazu müssen wir eine **Erweiterung** in `VSCode`
+    installieren. Öffnen Sie Visual Studio Code (VSCode), drücken Sie dann
+    `Command + P` und kopieren Sie den folgenden Text in das Feld und drücken Sie
+    `Enter`.
 
-    ```bash
-    brew install --cask docker
+    ```text
+    ext install ritwickdey.liveserver
     ```
-    Wenn die Installation abgeschlossen ist, öffnen Sie die Applikation Docker und durchlaufen Sie den Setup-Prozess. Starten Sie dann Ihren Computer neu.
+
+    Wählen Sie dann die Extension `Live Server` auf der linken Seite und drücken Sie
+    auf install.
 
   </Tab>
   <Tab className="hide" tabIndex="os-windows">
@@ -96,37 +103,25 @@ ausgewählt haben, ansonsten können Sie die Installation nicht korrekt durchfü
     winget install -e --id Google.Chrome
     ```
 
-    ### Docker-Desktop
+    ### Live Server
 
-    `Docker` ist ein Werkzeug mit dem man Container erstellen und laufen lassen kann. Das hat den Vorteil, dass wir auf verschiedenen Geräten mit verschiedenen Betriebssystemen die gleiche Umgebung in einem Container laufen lassen können. Somit sollten die Wekzeuge nach der Installation bei allen gleich funktionieren `Docker` können Sie auch mit diesem Befehl installieren.
+    Moderne Webseiten brauchen jeweils einen Webserver um zu funktionieren. Dafür
+    verwenden wir `Live Server`. Dazu müssen wir eine **Erweiterung** in `VSCode`
+    installieren. Öffnen Sie Visual Studio Code (VSCode), drücken Sie dann
+    `CTRL + P` und kopieren Sie den folgenden Text in das Feld und drücken Sie
+    `Enter`.
 
-    ```bash
-    winget install -e --id Docker.DockerDesktop
+    ```text
+    ext install ritwickdey.liveserver
     ```
 
-    Wenn die Installation abgeschlossen ist, öffnen Sie die Applikation Docker und durchlaufen Sie den Setup-Prozess. Starten Sie dann Ihren Computer neu.
+    Wählen Sie dann die Extension `Live Server` auf der linken Seite und drücken Sie
+    auf install.
 
   </Tab>
 </TabContainer>
 
 </section>
-
-### Dev Container
-
-<section>
-
-[Es kann sein, dass VSCode Sie fragt, ob Sie die Erweiterung `Dev Containers`
-installieren möchten. Wenn Sie dort auf ja drücken, können Sie diesen Abschnitt
-überspringen] Moderne Webseiten brauchen jeweils einen Webserver um zu
-funktionieren. Dafür verwenden wir `Docker` zusammen mit `nodejs`. Damit wir
-`Docker` direkt verwenden können, müssen wir eine **Erweiterung** in `VSCode`
-installieren. Öffnen Sie Visual Studio Code (VSCode), drücken Sie dann `CTRL + SHIFT + P` und kopieren Sie den
-folgenden Text in das Feld und drücken Sie `Enter`.
-
-```text
-ext install ms-vscode-remote.remote-containers
-```
-Wählen Sie dann die Extension Dev Containers auf der linken Seite und drücken Sie auf install.
 
 ## Github
 
@@ -139,8 +134,6 @@ Wählen Sie dann die Extension Dev Containers auf der linken Seite und drücken 
   erstellen Sie mit Ihrer Schul-E-Mailadresse einen Account.
 </section>
 
-</section>
-
 <Example title="Auftrag">
   Installieren Sie alle Programme die oben aufgezählt sind. Wenn Sie bereits
   fertig sind, waren Sie etwas schneller als Ihre KlassenkameradInnen. Helfen
@@ -150,8 +143,8 @@ Wählen Sie dann die Extension Dev Containers auf der linken Seite und drücken 
     <li>Ordnerstrukturen zum Programmieren</li>
     <li>Ein Projekt Klonen</li>
     <li>Ordnerstrukturen in einem Projekt</li>
-    <li>`CTRL + SHIFT + P`</li>
-    <li>Eine Webseite ausführen: `npm run dev`</li>
+    <li>`CTRL + SHIFT + P` und `CTRL + P`</li>
+    <li>Eine Webseite ausführen: `Live Server`</li>
     <li>Eine Webseite anpassen</li>
     <li>
       git
@@ -200,23 +193,12 @@ scrollen ein wenig nach unten.
 
 </section>
 
-## Container
-
-Wenn Sie mit dem Container kommunizieren möchten, müssen Sie das über ein
-Terminal machen. Das Terminal kann am Anfang ein wenig einschüchternd wirken, es
-ist aber sehr einfach zu bedienen, und auch sehr mächtig. Sie müssen in der
-Regel nur einfache Befehle eingeben, und wenn etwas nicht funktionieren sollte,
-dann bekommen Sie eine ausführliche Fehlermeldung. Wenn Sie aber alles richtig
-geschrieben haben, dann sollte auch alles ohne Probleme funktionieren.
-
-<Example title="Auftrag: Mit dem Container kommunizieren">
-Um ein neues Terminal zu öffnen, tippen Sie `CTRL + SHIFT + P` und suchen Sie
-nach dem Befehl `Terminal: Create New Terminal`. Dann sollte am unteren Rand ein
-neues Terminal aufgehen. Dort können Sie den Befehl `npm run dev` eintippen und
-mit `Enter` bestätigen. Das erstellt Ihnen einen neuen Webserver.
+<Example title="Auftrag: Webseite lokal starten">
+Um die Webseite auf Ihrem Laptop auszuführen, suchen Sie im File-Explorer auf der linken Seite das File `index.html`.
+Mit Rechtsklick gelangen Sie zum Menu, klicken Sie da auf `Open with Live Server`
 
 Wenn alles richtig funktioniert hat, können Sie über den folgenden Link Ihre
-eigene Webseite anzeigen lassen: [http://localhost:5173/](http://localhost:5173)
+eigene Webseite anzeigen lassen: [http://localhost:5500/](http://localhost:5500)
 
 </Example>
 
