--- a/src/sites/md/02-1-html-elements.mdx
+++ b/src/sites/md/02-1-html-elements.mdx
@@ -72,7 +72,7 @@ es braucht, und danach geht der Text direkt weiter.
 <Example title="Aufgabe: Spielen mit Block- und Inline-Elementen">
 
 - Was passiert wenn Sie ein Blockelement in ein Inlineelement packen?
-- Von Typ ist `<img>`?
+- Von welchem Typ ist `<img>`?
 - Wie können Sie ein Bild zentriert anzeigen, ohne Text daneben? (Tipp:
   `<center>`)
 
