ADD: project description

--- a/src/sites/md/02-1-html-elements.mdx
+++ b/src/sites/md/02-1-html-elements.mdx
@@ -27,10 +27,10 @@ Abschnitten. Dies kann mit HTML einfach dargestellt werden.
 </article>
 ```
 
-Die logische Struktur kann hier einfach vom Programmierer und auch vom Computer
-ausgelesen werden. Durch diese Art der Struktur, können später dann verschiedene
-Stiele auf die Webseite angewendet werden, was eine schöne und einheitliche
-Gestaltung ermöglicht, ohne darüber nachdenken zu müssen.
+Die logische Struktur kann einfach vom Computer ausgelesen werden. Durch diese
+Art der Struktur, können später dann verschiedene Stile auf die Webseite
+angewendet werden, was eine schöne und einheitliche Gestaltung ermöglicht, ohne
+darüber nachdenken zu müssen.
 
 </Example>
 
