CHANGE: simplify git

--- a/src/sites/md/01-project.mdx
+++ b/src/sites/md/01-project.mdx
@@ -21,4 +21,76 @@ https://github.com/gym-web-coding/[...].git
 
 </section>
 
+## Ziele des Projekts
+
+<section>
+  Durch dieses Projekt entwickeln Sie ihre Fähigkeiten in Webentwicklung,
+  Projektplanung und eigenständigem Arbeiten weiter. Sie erleben den gesamten
+  Entstehungsprozess einer Webseite und lernen, eigene Ideen strukturiert und
+  technisch fundiert umzusetzen. Die kontinuierliche Git-Dokumentation schult
+  sie zudem in professioneller Arbeitsweise und Nachvollziehbarkeit ihrer
+  Entwicklungsfortschritte.
+</section>
+
+## Vorgehensweise
+
+<section>
+    Im Rahmen dieses Projekts gestalten Sie eigenständig eine Webseite zu einem
+    selbstgewählten Thema. Dabei sollen sie alle Phasen der Webentwicklung
+    durchlaufen – von der Idee und Planung über die Umsetzung bis zur Dokumentation
+    und Abgabe. Die Webseite soll verschiedene technische und gestalterische
+    Anforderungen erfüllen, die Sie mit Eigeninitiative umsetzen.
+
+    ### Ideenfindung und Planung:
+    Wählen Sie ein Thema und erstellen eine kurze Planung der Struktur und Inhalte der Webseite.
+    Schauen Sie das Beispiel im README-Dokument an und passen Sie es so an, das es für Ihr Webseiten-Projekt stimmt.
+
+    ### Umsetzung des Projektes:
+    Setzen Sie Ihr Projekt um, indem Sie die technischen Implementationen vornehmen. Dokumentieren Sie Ihre Fortschritte gründlich mit git.
+
+    ### Abgabe des Projektes:
+    Als Abgabe zählt der letzte git-Commit vor der Abgabe-Deadline.
+
+</section>
+
+## Bewertungskriterien
+
+<section>
+    ### Prozess:
+    <ul>
+        <li> Die Zeit in den Lektionen wurde sinnvoll genutzt.</li>
+        <li> Die Aufgabe wurde selbstständig angegangen.</li>
+        <li> Regelmäßige und sinnvolle git Commits, sinnvolle Commit-Beschreibungen.</li>
+    </ul>
+
+    ### Umsetzung:
+    <ul>
+        <li> Saubere, semantische HTML-Struktur, korrekte Nutzung von Elementen/Tags</li>
+        <li> Sinnvolle Nutzung von Klassen und IDs mit CSS, mindestens ein Beispiel der Anpassung an verschiedene Bildschirmgrößen (Responsivität).</li>
+        <li> Sinnvolle und kreative Nutzung von mindestens einer SVG-Grafik.</li>
+        <li> Mindestens eine Verwendung von Javascript, um ein Element interaktiv zu gestalten.</li>
+    </ul>
+
+    ### Inhalt:
+    <ul>
+        <li> Die Webseite ist ansprechend gestaltet (Farben, Layout).</li>
+        <li> Sie haben selbstständig ein neues Element (HTML, CSS, oder Javascript) recherchiert und Ihrer Webseite hinzugefügt.</li>
+        <li> Die technischen Elemente wurden dem Inhalt entsprechend angewendet.</li>
+    </ul>
+
+    ### Planung:
+    <ul>
+        <li> Das Projekt wurde zeitlich den Vorgaben entsprechend sinnvoll geplant.</li>
+        <li> Die Planung wurde eingehalten und das Geplante wurde umgesetzt.</li>
+    </ul>
+
+    ### Finale Abgabe:
+    <ul>
+        <li> Das Projekt ist mit einem README dokumentiert.</li>
+        <li> Das Projekt wurde rechtzeitig abgegeben.</li>
+        <li> Die finale Abgabe funktioniert.</li>
+    </ul>
+
+</section>
+
 </Chapter>
