--- a/src/sites/md/03-0-css.mdx
+++ b/src/sites/md/03-0-css.mdx
@@ -113,33 +113,31 @@ import Presentation, {
 </Presentation>
 
 Bisher haben wir uns mit der Struktur von Webseiten beschäftigt. Nun möchten wir
-diese Strukturen auch verwenden um die Webseiten zu gestalten. Dies wird mit
-
-<b>CSS</b> (Cascading Style Sheets) gemacht.
+diese Strukturen auch verwenden um die Webseiten zu gestalten. Dies wird mit CSS
+(Cascading Style Sheets) gemacht.
 
 </section>
 
-### Stylesheet einbinden
+### Stylesheets
 
 Um eine saubere Trennung von Struktur und Gestaltung zu erreichen, können
 Stylesheets in Webseiten eingebunden werden. Damit können Styles auch auf
 mehreren Webseiten verwendet werden, und müssen nicht immer wiederholt werden.
 
-<Example title="Aufgabe: Stylesheet verlinken">
-  Fügen Sie den folgenden Code im `<head>` von Ihrem HTML Dokument
-  ein.
+<Example title="Aufgabe: Stylesheet untersuchen">
+  Im `<head>` von Ihrem HTML Dokument finden Sie folgenden Code:
 
 ```html
 <link rel="stylesheet" href="style.css" />
 ```
 
-Erstellen Sie dann eine neue Datei mit dem Namen `style.css`
+Suchen und öffnen Sie die Datei mit dem Namen `style.css`
 
 </Example>
 
 ### Stylesheet verwenden
 
-Haben Sie das Stylesheet eingebunden, möchten wir als erstes ausprobieren ob es
+Haben Sie das Stylesheet gefunden, möchten wir als erstes ausprobieren ob es
 funktioniert hat. Am einfachsten geht das wenn Sie eine direkt sichtbare
 Änderung machen. Zum Beispiel können Sie die Hintergrundfarbe der Webseite
 ändern.
