--- a/src/sites/md/04-0-git.mdx
+++ b/src/sites/md/04-0-git.mdx
@@ -51,17 +51,6 @@ Projekten zu arbeiten.
       </Basement>
     </Slide>
     <Slide>
-      ### Der `main` Branch
-      <Fragment>
-        Dies ist der Hauptentwickungszweig von einem Projekt.
-      </Fragment>
-      <ul>
-        <li class="fragment">Auf dem `main` Branch wird **nicht** entwickelt</li>
-        <li class="fragment">Wichtige Veränderungen werden in den `main` Branch `gemerged`</li>
-        <li class="fragment">Wir arbeiten meistens in einem `aufgabe-0x` Branch</li> 
-      </ul>
-    </Slide>
-    <Slide>
       ### Was ist ein `Commit`
       <Fragment>
       Ein `Commit` ist eine neue Version von unserem Projekt. Ein `Commit` wird immer dann erstellt, wenn ein Teil einer Aufgabe erledigt ist.
@@ -96,59 +85,13 @@ Projekten zu arbeiten.
         <li class="fragment">Erst die Veränderungen im `main` Branch werden geteilt</li>
       </ul>
     </Slide>
-    <Slide>
-      ### `Branches` teilen
-      <Fragment>
-        Branches werden über ein Projekt/Repository auf einem `Remote` geteilt, wie zum Beispiel `Github`.
-      </Fragment>
-      <ul>
-        <li class="fragment">Geteilt wird über `Github` oder einen anderen `Remote`</li>
-        <li class="fragment">Wenn ein `Branch` geteilt wird, dann `pusht` man diesen auf den `Remote`</li>
-        <li class="fragment">In der Regel wird nur der `main` Branch `gepusht`</li>
-      </ul>
-    </Slide>
-    <Slide>
-      ### Was sind `Merges`?
-      <Fragment>
-        Bei einem `merge` werden 2 `Branches` zusammengeführt und es gibt eine neue Verion.
-      </Fragment>
-      <ul>
-        <li class="fragment">Meistens wird `aufgabe-0x` in den `main` Branch `gemergt`</li>
-        <li class="fragment">Bei einem `Merge` werden die Veränderungen immer zum aktuellen `Branch` hinzugezogen</li>
-        <li class="fragment">Meistens hat man den `main` Branch `ausgecheckt`, wenn man einen `Merge` macht.</li>
-      </ul>
-    </Slide>
-    <Slide>
-      ### Was ist `checkout`?
-      <Fragment>
-        Man kann in `Git` einen `Commit` oder `Branch` `auschecken`. Das ist dann die Version auf der man gerade arbeitet.
-      </Fragment>
-      <ul>
-        <li class="fragment">`Checkout` macht einen `commit` **aktiv**</li>
-        <li class="fragment">Was nicht zu diesem `Commit` gehört, wird nicht angezeigt</li>
-        <li class="fragment">Man möchte **immer** einen `Branch` `ausgecheckt` haben.</li>
-        <li class="fragment">Bei einem `Branch` ist immer der neuste `Commit` darauf `ausgecheckt`.</li>
-        <li class="fragment">Vor einem `Merge` muss zuerst der *Ziel*branch `ausgecheckt` werden</li>
-        <li class="fragment">Wenn alles klappt, wird nach einem `Merge` meist ein `Push` gemacht.</li>
-      </ul>
-    </Slide>
-    <Slide>
-      ### Mergekonflikte
-      <Fragment>
-        `Mergekonflikte` treten auf wenn in verschiedenen `Branches` an den gleichen Stellen der Code geändert wurde.
-      </Fragment>
-      <ul>
-        <li class="fragment">Sehr selten wenn man alleine arbeitet</li>
-        <li class="fragment">Muss jeweils von Hand gelöst werden</li>
-        <li class="fragment">Kann durch Absprache reduziert werden</li>
-      </ul>
-    </Slide>
 </Presentation>
 
 </section>
 
 ### Commit
 
+<section>
 In **Git** gibt es das einfache Konzept von einem `commit`, der eine Version des
 Projektes repräsentiert. Ein Projekt besteht also aus einer Reihe von `commit`s,
 die durch Änderungen miteinander verbunden sind.
@@ -156,8 +99,6 @@ die durch Änderungen miteinander verbunden sind.
 Jeder `commit` in **Git** muss eine Nachricht haben, die die Änderung
 beschreibt, die seit dem letzten `commit` gemacht wurde. Diese
 Änderungsnachricht soll sehr kurz aber beschreibend sein.
-
-<Example title="Beispiel: Commit-Nachricht">
 
 Sie haben alle Bilder auf Ihrer Webseite zentriert und jeweils eine Beschreibung
 hinzugefügt. Das wäre eine Änderung die eine eigene Version sein kann, da die
@@ -170,11 +111,11 @@ Eine mögliche `commit`-Nachricht dafür wäre:
 Alle Bilder zentriert, und Beschreibung hinzugefügt.
 ```
 
-</Example>
-
 Die `commit`-Nachricht, sollte Ihnen helfen eine Änderung wieder zu finden, oder
 wenn Sie das Projekt nicht (mehr) kennen, sollten Sie interessante Änderungen
 schnell sehen.
+
+</section>
 
 ### Änderungen inspizieren
 
@@ -182,13 +123,5 @@ In einfachen Projekten wo Sie alleine Arbeiten, braucht man dies nicht so oft.
 Dennoch sollten Sie Sich damit vertraut machen, Änderungen in Dateien zu lesen.
 Die Änderungen zusammen mit der `commit` -Nachricht, ergeben eine Art
 Selbstdokumentation, Sie müssen dadurch nicht extra noch Notizen mitschreiben.
-
-<Example title="Beispiel: Änderungen anschauen">
-  Das folgende Video erklärt so ausführlich wie möglich, wie man in **Git** mit
-  Änderungen arbeitet. Versuchen Sie dem Video so gut wie möglich zu folgen, und
-  erstellen Sie sich einen für Sie praktischen Workflow, den Sie öfters anwenden
-  werden.
-  <Video url="XQvyb2lJZOc" />
-</Example>
 
 </Chapter>
