CHANGE: simplify commit slides

--- a/src/sites/md/04-0-git.mdx
+++ b/src/sites/md/04-0-git.mdx
@@ -74,16 +74,13 @@ Projekten zu arbeiten.
     </ul>
     </Slide>
     <Slide>
-      ### Verteilte Versionskontrolle
+      ### Commits synchronisieren
       <Fragment>
-        `Git` ist in der Lage völlig lokal und unabhängig von anderen zu arbeiten, daher nennt man `Git` auch eine *verteilte* Versionskontrolle.
+        `Commits` hinterlegen eine Version lokal auf Ihrem Rechner. Um Änderungen auch online verfügbar zu machen, müssen Sie diese synchronisieren.
       </Fragment>
-      <ul>
-        <li class="fragment">`Commits` können mit anderen geteilt werden</li>
-        <li class="fragment">`Commits` können lokal und unabhängig von anderen gemacht werden</li>
-        <li class="fragment">Die Entwicklung an einem `Branch` wird **nicht** geteilt</li>
-        <li class="fragment">Erst die Veränderungen im `main` Branch werden geteilt</li>
-      </ul>
+      <Fragment>
+        Drücken Sie dazu auf `Sync Changes` nachdem Sie einen `Commit` gemacht haben.
+      </Fragment>
     </Slide>
 </Presentation>
 
