UPDATE: git config

--- a/src/sites/md/04-0-git.mdx
+++ b/src/sites/md/04-0-git.mdx
@@ -12,6 +12,16 @@ import Presentation, {
 
 ## Versionskontrolle
 
+### git Konfiguration
+
+<section>
+Bevor Sie git verwenden können, müssen Sie dafür Ihre E-Mail und Ihren User setzen.
+Führen Sie folgende Befehle in einem Terminal aus:
+```code
+git config --global user.email “ihre@email.ch”
+git config --global user.name “Ihr Name”
+```
+</section>
 <section>
 
 Git ist ein Werkzeug das in der Softwareentwicklung - aber auch in anderen
@@ -61,17 +71,6 @@ Projekten zu arbeiten.
         <li class="fragment">Bereits vor der Arbeit, sollte man wissen was erreicht werden soll</li>
         <li class="fragment">Hat eine kurze klare Beschreibung für die Veränderung</li>
       </ul>
-    </Slide>
-    <Slide>
-    ### Der `WIP-Commit`
-    <Fragment>
-      `WIP` steht für `work in progress` und wird verwendet um unvollständige `Commits` zu markieren.
-    </Fragment>
-    <ul>
-      <li class="fragment">Sollte nur selten vorkommen</li>
-      <li class="fragment">Wird oft Ende Lektion verwendet</li>
-      <li class="fragment">Kann verwendet werden, wenn man nicht weiter kommt</li>
-    </ul>
     </Slide>
     <Slide>
       ### Commits synchronisieren
