--- a/src/sites/md/02-1-html-elements.mdx
+++ b/src/sites/md/02-1-html-elements.mdx
@@ -42,7 +42,7 @@ Text hervorgehoben werden, kann man dies entweder durch <b>Fettdruck</b> oder
 
 <i>Kursiv</i> erreichen. Es gibt auch noch andere Möglichkeiten Text hervorzuheben.
 
-<Example title="Aufgabe: Bauen Sie die folgenden Elemente in Ihre Webseite ein.">
+<Example title="Aufgabe: Bauen Sie einige der folgenden Elemente in Ihre Webseite ein.">
 
 - `<b>`
 - `<i>`
