--- a/src/sites/md/03-4-css-img.mdx
+++ b/src/sites/md/03-4-css-img.mdx
@@ -6,7 +6,7 @@ import Video from "../../components/Video"
 
 <Chapter>
 
-## Mit Bildern umgehenzen
+## Mit Bildern umgehen
 
 Bilder werden in HTML wie Text behandelt, oder genauer gesagt wie
 
