IMPROVE: css id example

--- a/src/sites/md/03-1-css-selectors.mdx
+++ b/src/sites/md/03-1-css-selectors.mdx
@@ -72,7 +72,19 @@ gestellt werden. Bei IDs wird das Zeichen `#`{" "} verwendet.
 <Example title="Aufgabe: IDs verwenden">
 
 Geben Sie einem Element auf Ihrer Webseite eine ID, und erstellen Sie eine Regel
-für dieses Element.
+für dieses Element. Sie können Sich dabei an dem folgenden Beispiel orientieren.
+
+```html
+<div id="menu-button">
+  ...
+</div>
+```
+In CSS (Bsp. im style.css) können Sie diese ID folgendermassen ansteuern:
+```css
+#menu-button{
+  ...
+}
+```
 
 </Example>
 
