CHANGE: evaluation info

--- a/src/sites/md/01-project.mdx
+++ b/src/sites/md/01-project.mdx
@@ -56,40 +56,8 @@ https://github.com/gym-web-coding/[...].git
 ## Bewertungskriterien
 
 <section>
-    ### Prozess:
-    <ul>
-        <li> Die Zeit in den Lektionen wurde sinnvoll genutzt.</li>
-        <li> Die Aufgabe wurde selbstständig angegangen.</li>
-        <li> Regelmäßige und sinnvolle git Commits, sinnvolle Commit-Beschreibungen.</li>
-    </ul>
-
-    ### Umsetzung:
-    <ul>
-        <li> Saubere, semantische HTML-Struktur, korrekte Nutzung von Elementen/Tags</li>
-        <li> Sinnvolle Nutzung von Klassen und IDs mit CSS, mindestens ein Beispiel der Anpassung an verschiedene Bildschirmgrößen (Responsivität).</li>
-        <li> Sinnvolle und kreative Nutzung von mindestens einer SVG-Grafik.</li>
-        <li> Mindestens eine Verwendung von Javascript, um ein Element interaktiv zu gestalten.</li>
-    </ul>
-
-    ### Inhalt:
-    <ul>
-        <li> Die Webseite ist ansprechend gestaltet (Farben, Layout).</li>
-        <li> Sie haben selbstständig ein neues Element (HTML, CSS, oder Javascript) recherchiert und Ihrer Webseite hinzugefügt.</li>
-        <li> Die technischen Elemente wurden dem Inhalt entsprechend angewendet.</li>
-    </ul>
-
-    ### Planung:
-    <ul>
-        <li> Das Projekt wurde zeitlich den Vorgaben entsprechend sinnvoll geplant.</li>
-        <li> Die Planung wurde eingehalten und das Geplante wurde umgesetzt.</li>
-    </ul>
-
-    ### Finale Abgabe:
-    <ul>
-        <li> Das Projekt ist mit einem README dokumentiert.</li>
-        <li> Das Projekt wurde rechtzeitig abgegeben.</li>
-        <li> Die finale Abgabe funktioniert.</li>
-    </ul>
+   
+   Werden separat auf OneNote publiziert.
 
 </section>
 
