REMOVE: demo project

--- a/src/sites/md/01-installation.mdx
+++ b/src/sites/md/01-installation.mdx
@@ -165,17 +165,13 @@ Wenn Sie alles installiert haben, öffnen Sie `VSCode` und erstellen Sie ein
 neues Projekt um zu testen ob alles richtig installiert ist.
 
 Drücken Sie dafür `CTRL + SHIFT + P` und tippen Sie `clone`. Wählen Sie dann
-`Git: Clone` aus, und klonen Sie das folgende Repository zu Ihnen auf den
-Computer indem Sie den Link unten in das Feld kopieren. (Drücken Sie nicht auf
-`Clone from Github`, sondern kopieren Sie den Link in das leere Feld)
-
-```text
-https://github.com/gymmu/00-demo.git
-```
+`Git: Clone` aus, und klonen Sie Ihr Repository auf Ihren Computer indem Sie den
+Link in das Feld kopieren. (Drücken Sie nicht auf `Clone from Github`, sondern
+kopieren Sie den Link in das leere Feld)
 
 </Example>
 
-## Demo Projekt
+## Projekt erforschen
 
 <section>
 
@@ -183,13 +179,7 @@ Wenn Sie das Projekt erfolgreich geklont haben, haben Sie alle Dateien, sowie
 den ganzen Versionsverlauf bei Ihnen auf dem Computer. Sie können im `Explorer`
 (ganz links bei `VSCode`) schauen welche Dateien verfügbar sind. Jedes Projekt /
 Repository sollte immer eine `README.md` Datei haben, die Sie durchlesen
-sollten. Da stehen alle Informationen die Sie zu dem Projekt brauchen. Bei
-unseren Projekten, stehen da auch gleich die Aufgaben. Diese Datei sollten Sie
-also immer gut durchlesen. Oftmals ist es besser diese Datei direkt auf `Github`
-anzuschauen, weil sie dort etwas schöner dargestellt wird. Dafür folgen Sie
-einfach diesem Link hier:
-[https://github.com/gymmu/00-demo.git](https://github.com/gymmu/00-demo.git) und
-scrollen ein wenig nach unten.
+sollten. Da stehen alle Informationen die Sie zu dem Projekt brauchen.
 
 </section>
 
