ADD: vs code tips

--- a/src/sites/md/01-intro.mdx
+++ b/src/sites/md/01-intro.mdx
@@ -8,17 +8,20 @@ import { Tab, TabContainer, TabsButton } from "../../components/Tabs"
 
 <section>
 
-XML-basierte Sprachen sind Markup-Sprachen, die auf dem Extensible Markup Language (XML) basieren.
-Sie dienen dazu, strukturierte Daten in einer klar definierten, hierarchischen Form darzustellen, was sie besonders für die Darstellung von Informationen im Web geeignet macht.
-In den nächsten Wochen lernen Sie zwei  XML-basierte Sprachen: SVG (Scalable Vector Graphics) und HTML (Hypertext Markup Language).
+XML-basierte Sprachen sind Markup-Sprachen, die auf dem Extensible Markup
+Language (XML) basieren. Sie dienen dazu, strukturierte Daten in einer klar
+definierten, hierarchischen Form darzustellen, was sie besonders für die
+Darstellung von Informationen im Web geeignet macht. In den nächsten Wochen
+lernen Sie eine XML-basierte Sprache: HTML (Hypertext Markup Language).
 
-XML-basierte Sprachen sind hierarchisch organisiert, was bedeutet, dass Informationen in einer Baumstruktur dargestellt werden.
-Jedes Element kann untergeordnete Elemente enthalten.
-Diese Verschachtelung ermöglicht eine klare Organisation der Daten und erleichtert die Verarbeitung.
+XML-basierte Sprachen sind hierarchisch organisiert, was bedeutet, dass
+Informationen in einer Baumstruktur dargestellt werden. Jedes Element kann
+untergeordnete Elemente enthalten. Diese Verschachtelung ermöglicht eine klare
+Organisation der Daten und erleichtert die Verarbeitung.
 
 Elemente werden in Tags definiert, welche folgende Struktur besitzen: `<tag>`.
-Der Inhalt wird immer von einem öffnenden und einem schliessenden Tag eingeschlossen.
-Wobei Sie Tags beliebig oft verschachteln können:
+Der Inhalt wird immer von einem öffnenden und einem schliessenden Tag
+eingeschlossen. Wobei Sie Tags beliebig oft verschachteln können:
 
 ```bash
 <html>
@@ -27,7 +30,9 @@ Wobei Sie Tags beliebig oft verschachteln können:
   </svg>
 </html>
 ```
-Im Gegensatz zu Python ist die Einrückung zwar nicht relevant. wird aber oft trotzdem verwendet, um die Lesbarkeit zu verbessern.
+
+Im Gegensatz zu Python ist die Einrückung zwar nicht relevant. wird aber oft
+trotzdem verwendet, um die Lesbarkeit zu verbessern.
 
 </section>
 
